crates/wac-parser/tests/resolution/fail/export-conflict-interface.wac
package test:comp;

import f: func();

interface foo {

}

export f as "foo";
